k8s/base/state/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: llm-node
  template:
    metadata:
      labels:
        app: llm-node
    spec:
      containers:
        - name: fastapi-server
          image: llm-enterprise:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
      resources:
        limits:
          memory: "4Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
      app: llm-node
